# q1pulse

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tbump.toml
q1pulse/: __init__.py  instrument.py  program.py  turbo_cluster.py
q1pulse/assembler/: generator.py  generator_data.py  instruction_queue.py  registers.py
q1pulse/lang/: base.py  builderbase.py  conditions.py  control.py  exceptions.py  expression.py  flow_statements.py  generator.py  loops.py  math_expressions.py  register.py  register_statements.py  registers.py  sequence.py  simulator_statements.py  timed_statements.py  timeline.py  triggers.py
q1pulse/model/: builderbase.py  control.py  flow_statements.py  generator.py  loops.py  math_expressions.py  readout.py  register.py  register_statements.py  registers.py  sequence.py  sequencer_data.py  timed_statements.py  timeline.py
q1pulse/modules/: modules.py  sequencer_states.py
q1pulse/sequencer/: control.py  readout.py  sequencer.py  sequencer_data.py
q1pulse/util/: delayedkeyboardinterrupt.py  notepad++_UDL.xml  q1configuration.py  qblox_version.py  shapes.py
tests/: init_logger.py  init_pulsars.py  mult400.py  plot_util.py  test_1ns_resolution.py  test_acq_freq_sweep.py  test_acquire.py  test_acquire_mock_data.py  test_acquire_ttl.py  test_array_loop.py  test_asr.py  test_baseband.py  test_chirp.py  test_chirp_1ns.py  test_csd.py  test_csd_ramp.py  test_csd_ramp_pulselib.py  test_feedback.py  test_frequency.py  test_iq_pulse.py  test_iq_pulse_1ns.py  test_loop_range.py  test_loops.py  test_markers.py  test_nco_sync.py  test_phase.py  test_phase_shifting.py  test_prng.py  test_rabi.py  test_ramp.py  test_ramp_loop.py  test_ramsey.py  test_registers.py  test_shaped_block_pulses.py  test_shaped_pulses.py  test_slow_ramp.py  test_sync.py  test_sync_wave.py
tests/q1/acq_rf_sweep/: q1seq_q1.json  q1seq_q1.q1asm  q1seq_rf1.json  q1seq_rf1.q1asm
tests/q1/acquire/: q1seq_P1.json  q1seq_P1.q1asm  q1seq_P2.json  q1seq_P2.q1asm  q1seq_P2c.json  q1seq_P2c.q1asm  q1seq_R1.json  q1seq_R1.q1asm
tests/q1/acquire_mocked/: q1seq_P1.json  q1seq_P1.q1asm  q1seq_P2.json  q1seq_P2.q1asm  q1seq_P2c.json  q1seq_P2c.q1asm  q1seq_R1.json  q1seq_R1.q1asm
(+150 files in other folders)
